# neural-manifolds

./: .gitignore  pyproject.toml
scripts/: model_intermediate_layer_activation.py
src/neuman/models/: __init__.py  base.py  foundation.py
src/neuman/video/: __init__.py  video.py
src/neuman/video/adapter/: __init__.py  base.py  foundation.py
src/neuman/video/loader/: __init__.py  base.py  rdk.py  rendered_scene.py
src/neuman/visualize/: manifold.py  test.py  utils.py  video.py
